Add retrive from google API the coordinates and direction of the turns

--- a/app/src/main/res/layout/activity_on_run.xml
+++ b/app/src/main/res/layout/activity_on_run.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="false">
+        android:layout_alignParentEnd="false"
+        android:id="@+id/tableLayout">
 
         <TextView
             android:layout_width="wrap_content"
@@ -78,5 +79,23 @@
 
 
     </TableLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/arrowImageViwer"
+        android:layout_below="@+id/tableLayout"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/redx"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test Next Turn"
+        android:id="@+id/btnTestNextTurn"
+        android:onClick="onClick_testButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
