--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,15 +12,10 @@
     tools:context="com.example.finkel.bikecycle.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Run"
+        android:text="Start Demo"
         android:id="@+id/startRunBtn"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
