--- a/app/src/main/res/layout/activity_on_run.xml
+++ b/app/src/main/res/layout/activity_on_run.xml
@@ -69,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="01:35:33"
+                    android:text="00:35:33"
                     android:id="@+id/infoTimePassed"
                     android:textSize="@dimen/really_large_font"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -92,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Straight"
+                    android:text="Left"
                     android:id="@+id/infoNextTurnTxt"
                     android:textSize="@dimen/really_large_font"
                     android:layout_marginTop="@dimen/activity_vertical_margin"/>
@@ -123,7 +123,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="turn dist(km)"
+                    android:text="turn dist(m)"
                     android:id="@+id/NextTurnDistanceTxt"
                     android:layout_below="@+id/infoNextTurnDistanceTxt"
                     android:layout_alignParentRight="true"
